--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
-</head>
-<body>
-    <h1>Módulo Website</h1>
-</body>
-</html>
+{% extends 'website/_layouts/modelo-ifpr.html' %}
+{% load static %}
+
+{% block content %}
+    <h3>Página inicial</h3>
+    
+{% endblock content %}
