add crispy to forms

--- a/records/templates/records/form-delete.html
+++ b/records/templates/records/form-delete.html
@@ -10,5 +10,6 @@
     {{ form.as_p }}
 
     <input class="btn btn-danger" type="submit" value="Excluir">
+    <a class="btn btn-secondary" href="{% url 'website:index' %}">Voltar</a>
 </form>   
 {% endblock content %}
