--- a/records/templates/records/form.html
+++ b/records/templates/records/form.html
@@ -1,11 +1,15 @@
 {% extends 'website/_layouts/modelo-ifpr.html' %}
+
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
+<form method="post">{% csrf_token %}
+    {{ form|crispy }}
+
     <input class="btn btn-primary" type="submit" value="Cadastrar">
+    
+    <a class="btn btn-secondary" href="{% url 'website:index' %}">Voltar</a>
 </form>
 {% endblock content %}
 
