--- a/website/templates/website/_layouts/modelo-ifpr.html
+++ b/website/templates/website/_layouts/modelo-ifpr.html
@@ -85,15 +85,10 @@
 
                                 <a class="dropdown-item" href="#">Cidades</a>
                                 <a class="dropdown-item" href="#">Estados</a>
-                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Campus</a>
-                                <a class="dropdown-item" href="#">Status</a>
-                                <a class="dropdown-item" href="#">Situações</a>
-                                <a class="dropdown-item" href="#">Classes</a>
-                                <a class="dropdown-item" href="#">Progressões</a>
-                                <a class="dropdown-item" href="#">Campos</a>
-                                <a class="dropdown-item" href="#">Atividades</a>
-                                <a class="dropdown-item" href="#">Comprovantes</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{% url 'records:list-field' %}">Campos</a>
+                                <a class="dropdown-item" href="{% url 'records:list-activity' %}">Atividades</a>
 
                             </div>
                         </li>
