--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -15,16 +15,17 @@
         </p> 
     </div>
     {% else %}
-    <div class="col-md-4 mx-auto">    
-        <h3 class="mb-4">Autenticação</h3>
+    <div class="col mx-auto">
+
+        <h3 class="mb-4">Registrar Usuário</h3>
 
         <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
 
-            <input class="btn btn-primary" type="submit" value="Login">
-            <a class="btn btn-secondary" href="{% url 'auth:register' %}">Registrar</a>
-        </form>     
+            <input class="btn btn-primary" type="submit" value="Cadastrar">
+            <a class="btn btn-secondary" href="{% url 'auth:login' %}">Login</a>
+        </form>
     </div>
     {% endif %}
 </div>
