--- a/website/templates/website/_layouts/modelo-ifpr.html
+++ b/website/templates/website/_layouts/modelo-ifpr.html
@@ -135,7 +135,7 @@
                         </li>
                         {% else %}
                         <li class="nav-item ">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{% url 'auth:register' %}">
                                 <i class="fa fa-user-plus" aria-hidden="true"></i>
                                 Registrar
                             </a>
