--- a/records/templates/records/lists/receipt.html
+++ b/records/templates/records/lists/receipt.html
@@ -27,7 +27,7 @@
             <td>{{ receipt.initial_date }}</td>
             <td>{{ receipt.final_date }}</td>
             <td>{{ receipt.user }}</td>
-            <td>{{ receipt.file }}</td>
+            <td><a href="{{ receipt.file.url }}" target="_blank">Ver</a></td>
             <td>
                 <a class="btn btn-warning btn-sm" href="{% url 'records:update-receipt' receipt.id %}">
                     <i class="fa fa-pencil" aria-hidden="true"></i>
@@ -39,7 +39,7 @@
         </tr>
     {% empty %}
         <tr>
-            <td colspan="5"><strong>Nenhuma informação cadastrada</strong></td>
+            <td colspan="7"><strong>Nenhuma informação cadastrada</strong></td>
         </tr>
     {% endfor %}
     </tbody>
