--- a/records/templates/records/form.html
+++ b/records/templates/records/form.html
@@ -14,3 +14,27 @@
     <a class='btn btn-secondary' href='{% url link %}'>voltar</a>
 </form>
 {% endblock content %}
+
+{% block scripts %}
+<script src="{% static 'js/jquery.mask.min.js' %}"></script>
+
+<script>
+    $(document).ready(function() {
+        var SPMaskBehavior = function (val) {
+            return val.replace(/\D/g, '').length === 11 ? '(00) 00000-0000' : '(00) 0000-00009';
+          },
+          spOptions = {
+            onKeyPress: function(val, e, field, options) {
+                field.mask(SPMaskBehavior.apply({}, arguments), options);
+              }
+          };
+          
+          $('#id_phone').mask(SPMaskBehavior, spOptions);
+
+        $('#id_cpf').mask('000.000.000-00', {reverse: true});
+        $('#id_initial_date').mask('00/00/0000');
+        $('#id_final_date').mask('00/00/0000');
+        $('#id_validated_in').mask('00/00/0000');
+    });
+</script>
+{% endblock scripts %}
