--- a/records/templates/records/lists/campus.html
+++ b/records/templates/records/lists/campus.html
@@ -7,7 +7,7 @@
 
 <a class="btn btn-primary mb-3" href="{% url 'records:register-campus' %}">Cadastrar</a>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-list">
     <thead>
         <tr>
             <th>Cidade</th>
@@ -37,3 +37,5 @@
     </tbody>
 </table>
 {% endblock content %}
+
+{% block scripts %}{% endblock scripts %}
