--- a/records/templates/records/lists/city.html
+++ b/records/templates/records/lists/city.html
@@ -7,7 +7,7 @@
 
 <a class="btn btn-primary mb-3" href="{% url 'records:register-city' %}">Cadastrar</a>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-list">
     <thead>
         <tr>
             <th>ID</th>
@@ -39,3 +39,5 @@
     </tbody>
 </table>
 {% endblock content %}
+
+{% block scripts %}{% endblock scripts %}
