--- a/records/templates/records/lists/field.html
+++ b/records/templates/records/lists/field.html
@@ -7,7 +7,7 @@
 
 <a class="btn btn-primary mb-3" href="{% url 'records:register-field' %}">Cadastrar</a>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-list">
     <thead>
         <tr>
             <th>Nome</th>
@@ -36,3 +36,5 @@
     </tbody>
 </table>
 {% endblock content %}
+
+{% block scripts %}{% endblock scripts %}
