--- a/records/templates/records/lists/progression.html
+++ b/records/templates/records/lists/progression.html
@@ -7,7 +7,7 @@
 
 <a class="btn btn-primary mb-3" href="{% url 'records:register-progression' %}">Cadastrar</a>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-list">
     <thead>
         <tr>
             <th>Classe</th>
@@ -41,3 +41,5 @@
     </tbody>
 </table>
 {% endblock content %}
+
+{% block scripts %}{% endblock scripts %}
