--- a/records/templates/records/lists/receipt.html
+++ b/records/templates/records/lists/receipt.html
@@ -7,7 +7,7 @@
 
 <a class="btn btn-primary mb-3" href="{% url 'records:register-receipt' %}">Cadastrar</a>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-list">
     <thead>
         <tr>
             <th>Progressão</th>
@@ -45,3 +45,5 @@
     </tbody>
 </table>
 {% endblock content %}
+
+{% block scripts %}{% endblock scripts %}
